<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/ToolBarStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/back"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="6dp"
                    android:src="@drawable/ic_back"
                    android:translationZ="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <io.github.florent37.shapeofview.shapes.ArcView
                    android:id="@+id/preview"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shape_arc_height="20dp"
                    app:shape_arc_position="bottom">

                    <com.flaviofaria.kenburnsview.KenBurnsView
                        android:id="@+id/previewImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/card_background"
                        android:scaleType="fitXY" />

                </io.github.florent37.shapeofview.shapes.ArcView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/showTrailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/show_trailer"
                    android:elevation="6dp"
                    android:src="@drawable/ic_trailer"
                    app:borderWidth="0dp"
                    app:layout_anchorGravity="bottom|end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageCard"
                    app:tint="@color/white" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageCard"
                    android:layout_width="@dimen/movie_card_width"
                    android:layout_height="@dimen/movie_card_height"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="230dp"
                    android:layout_marginBottom="4dp"
                    android:backgroundTint="@android:color/transparent"
                    android:clickable="false"
                    android:elevation="0dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/background_image_round_corners"
                        android:backgroundTint="@color/card_background"
                        android:contentDescription="@string/film"
                        android:scaleType="fitXY"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_saw" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/filmBlock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageCard"
                    app:layout_constraintTop_toBottomOf="@+id/preview">

                    <TextView
                        android:id="@+id/filmName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="Война бесконечности" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:drawablePadding="10dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/textRegularColor"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_star_rate"
                            app:drawableTint="@color/colorAccent"
                            app:layout_constraintBottom_toTopOf="@id/genre"
                            app:layout_constraintEnd_toStartOf="@id/length"
                            app:layout_constraintStart_toStartOf="@id/genre"
                            app:layout_constraintTop_toBottomOf="@+id/filmName"
                            tools:text="9.3" />

                        <TextView
                            android:id="@+id/length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:drawablePadding="10dp"
                            android:fontFamily="sans-serif"
                            android:textColor="@color/textRegularColor"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/ic_time"
                            app:drawableTint="@color/colorAccent"
                            app:layout_constraintBottom_toBottomOf="@+id/rate"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/rate"
                            app:layout_constraintTop_toTopOf="@+id/rate"
                            tools:text="2 ч. 15 мин." />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintBottom_toBottomOf="@id/imageCard"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/imageCard"
                        tools:text="Фантастика | Комедия | Боевик" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/diagonalLayout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/filmSlogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:textSize="14sp"
                android:textStyle="italic"
                tools:text="Война бесконечности" />

            <TextView
                android:id="@+id/releaseData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/release_data"
                android:textColor="@color/textRegularColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/country"
                android:textColor="@color/textRegularColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/imdb_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/imdb_rate"
                android:textColor="@color/textRegularColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/critics_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/critics_rate"
                android:textColor="@color/textRegularColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/budget"
                android:textColor="@color/textRegularColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/description"
                android:textColor="@color/textRegularColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/textGray"
                android:textSize="15sp"
                tools:text="Описание фильма" />

            <TextView
                android:id="@+id/directorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/directors"
                android:textColor="@color/textRegularColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/directorsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <TextView
                android:id="@+id/actorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/actors"
                android:textColor="@color/textRegularColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actorsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <TextView
                android:id="@+id/serviceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/other_staff"
                android:textColor="@color/textRegularColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/serviceRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4" />

            <TextView
                android:id="@+id/reviewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/reviews"
                android:textColor="@color/textRegularColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>